--- a/eshop/templates/user/cart.html
+++ b/eshop/templates/user/cart.html
@@ -17,6 +17,8 @@
                 <h2>{{i.product.name}}</h2>
                 <h2>{{i.product.price}}</h2>
                 <a href="delete_cart/{{i.pk}}">delete</a>
+                <a href="../buy_user/{{i.pk}}">buy</a>
+
             </div>
 
             {% endfor %}
