--- a/eshop/templates/user/view_cart.html
+++ b/eshop/templates/user/view_cart.html
@@ -40,6 +40,9 @@
                 <s><h6>₹{{i.product.price}}</h6></s>
                 <h3>₹{{i.product.ofr_price}}</h3>
                 <p>{{i.product.dis}}</p>
+                <a href="delete_cart/{{i.pk}}" class="btn btn_dark">Remove</a>
+                <a href="user_buy1/{{i.pk}}" class="btn btn_dark">Buy</a>
+
 
             </div>
             {% endfor %}
