--- a/eshop/templates/user/home.html
+++ b/eshop/templates/user/home.html
@@ -34,6 +34,9 @@
                 <a class="nav-link" href="view_cart">Cart</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="user_booking">User Booking</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="shp_logout">Log out</a>
               </li>    
             </ul>
@@ -47,7 +50,7 @@
         <div class="col-lg-3">
             <a href="view_pro/{{product.pk}}">
                 <div class="card">
-                    <img class="card-img-top" src="{{product.img.url}}" alt="Card image" style="height: 400px; width: 100%;">
+                    <img class="card-img-top" src="{{product.img.url}}" alt="Card image" style="height: 400px; width: 100%; ">
                     <div class="card-body">
                       <h4 class="card-title">{{product.name}}</h4>
                       <p class="card-text">{{product.dis}}</p>
