--- a/eshop/templates/user/view_cart.html
+++ b/eshop/templates/user/view_cart.html
@@ -41,7 +41,7 @@
                 <h3>₹{{i.product.ofr_price}}</h3>
                 <p>{{i.product.dis}}</p>
                 <a href="delete_cart/{{i.pk}}" class="btn btn_dark">Remove</a>
-                <a href="user_buy1/{{i.pk}}" class="btn btn_dark">Buy</a>
+                <a href="user_buy/{{i.pk}}" class="btn btn_dark">Buy</a>
 
 
             </div>
